cloudformation/backend/cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  InstanceType:
    Type: String
    Description: EC2 instance type for the API server
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID where the EC2 instance will be launched
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet ID where the EC2 instance will be launched
  PublicKeyMaterial:
    Type: String
    Description: Public key material for the EC2 key pair
  HostedZoneName:
    Description: The name of the hosted zone where the DNS record will be created
    Type: String
  APIDomainName:
    Description: The domain name of the backend API
    Type: String
  InfluxDomainName:
    Description: The domain name of the influxDB
    Type: String
  GrafanaDomainName:
    Description: The domain name of the Grafana
    Type: String
  MyIpAddress:
    Description: The IP address of the client that will be allowed to SSH into the EC2 instance
    Type: String

Resources:
  APIDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref HostedZoneName
      Name: !Ref APIDomainName
      Type: A
      TTL: '900'
      ResourceRecords:
        - !Ref ElasticIP

  InfluxDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref HostedZoneName
      Name: !Ref InfluxDomainName
      Type: A
      TTL: '900'
      ResourceRecords:
        - !Ref ElasticIP

  GrafanaDNSRecord:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneName: !Ref HostedZoneName
      Name: !Ref GrafanaDomainName
      Type: A
      TTL: '900'
      ResourceRecords:
        - !Ref ElasticIP

  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0370d04afa44db778  # Ubuntu 22.04 AMI (ARM HVM)
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !Ref APISecurityGroup
        - !Ref SSHSecurityGroup
      SubnetId: !Ref SubnetId
      IamInstanceProfile: !Ref IAMInstanceProfile
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: 16
            DeleteOnTermination: true

  IAMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: !Sub ${AWS::StackName}-policy
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - s3:GetObject
                  - s3:PutObject
                  - s3:DeleteObject
                Resource: !Join
                  - '/'
                  - - !GetAtt Bucket.Arn
                    - '*'
              - Effect: Allow
                Action:
                  - s3:ListBucket
                Resource: !GetAtt Bucket.Arn
              - Effect: Allow
                Action:
                  - ses:SendRawEmail
                Resource: !Ref AWS::SESIdentity

  IAMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref IAMRole

  APISecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the API server
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the SSH server
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIpAddress

  KeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Sub ${AWS::StackName}-keypair
      PublicKeyMaterial: !Ref PublicKeyMaterial

  ElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Ec2Instance

  Bucket:
    Type: AWS::S3::Bucket
    DeletionPolicy: Retain
    Properties:
      BucketName: !Sub ${AWS::StackName}-bucket

Outputs:
  InstanceId:
    Description: The instance ID of the API server
    Value: !Ref Ec2Instance
  PublicIpAddress:
    Description: The public IP address of the API server
    Value: !GetAtt Ec2Instance.PublicIp
  ElasticIpAddress:
    Description: The Elastic IP address associated with the API server
    Value: !Ref ElasticIP
